Update deps (#8)
---------

Signed-off-by: Kevin S. Clarke <ksclarke@ksclarke.io>